package model;

public enum ERoomEffects {
    
}
