package model;

public interface IRoomManager {
    
}
