package model;

public interface ITimer {
    
}
