package model;

public class Teacher extends Player {
    
    public void move(Room r) {}
}
